# tink-objc

./: .bazelrc  CHANGELOG  MODULE.bazel  README.md  WORKSPACE  minimum_os.bzl  tink_objc_deps.bzl  tink_version.bzl
Tink/: BUILD.bazel  TINKDeterministicAeadInternal.h  TINKHybridKeyTemplate.h  TINKJSONKeysetReader.h
Tink/Tests/Host/: AppDelegate.m  main.m
Tink/Tests/UnitTests/aead/: TINKAeadFactoryTest.mm  TINKAeadKeyTemplateTest.mm
Tink/Tests/UnitTests/core/: TINKBinaryKeysetReaderTest.mm  TINKCleartextKeysetHandleTest.mm  TINKJSONKeysetReaderTest.mm  TINKKeysetHandleTest.mm  TINKVersionTest.m
Tink/Tests/UnitTests/daead/: TINKDeterministicAeadFactoryTest.mm  TINKDeterministicAeadKeyTemplateTest.mm
Tink/Tests/UnitTests/hybrid/: TINKHybridDecryptFactoryTest.mm  TINKHybridEncryptFactoryTest.mm  TINKHybridFactoryTest.mm  TINKHybridKeyTemplateTest.mm
Tink/Tests/UnitTests/mac/: TINKMacFactoryTest.mm  TINKMacKeyTemplateTest.mm
Tink/Tests/UnitTests/signature/: TINKPublicKeySignFactory.mm  TINKPublicKeySignVerifyFactoryTest.mm  TINKPublicKeyVerifyFactory.mm  TINKSignatureKeyTemplateTest.mm
Tink/aead/: TINKAeadConfig.mm  TINKAeadFactory.mm  TINKAeadInternal.h  TINKAeadInternal.mm  TINKAeadKeyTemplate.mm
Tink/core/: TINKAllConfig.mm  TINKBinaryKeysetReader.mm  TINKConfig.mm  TINKJSONKeysetReader.mm  TINKKeyTemplate.mm  TINKKeyTemplate_Internal.h  TINKKeysetHandle+Cleartext.mm  TINKKeysetHandle.mm  TINKKeysetHandle_Internal.h  TINKKeysetReader.mm  TINKKeysetReader_Internal.h  TINKRegistryConfig.mm  TINKVersion.m.templ
Tink/daead/: TINKDeterministicAeadConfig.mm  TINKDeterministicAeadFactory.mm  TINKDeterministicAeadInternal.h  TINKDeterministicAeadInternal.mm  TINKDeterministicAeadKeyTemplate.mm
Tink/hybrid/: TINKHybridConfig.mm  TINKHybridDecryptFactory.mm  TINKHybridDecryptInternal.h  TINKHybridDecryptInternal.mm  TINKHybridEncryptFactory.mm  TINKHybridEncryptInternal.h  TINKHybridEncryptInternal.mm  TINKHybridKeyTemplate.mm
Tink/mac/: TINKMacConfig.mm  TINKMacFactory.mm  TINKMacInternal.h  TINKMacInternal.mm  TINKMacKeyTemplate.mm
Tink/proto_redirect/: BUILD.bazel
Tink/signature/: TINKPublicKeySignFactory.mm  TINKPublicKeySignInternal.h  TINKPublicKeySignInternal.mm  TINKPublicKeyVerifyFactory.mm  TINKPublicKeyVerifyInternal.h  TINKPublicKeyVerifyInternal.mm  TINKSignatureConfig.mm  TINKSignatureKeyTemplate.mm
Tink/util/: BUILD.bazel  TINKErrors.mm  TINKStrings.mm
examples/: .bazelrc  MODULE.bazel
examples/helloworld/: BUILD.bazel  README.md
examples/helloworld/bazel/: BUILD.bazel  README.md
kokoro/macos_external/bazel/: run_tests.sh
proto/: aes_ctr_hmac_aead.proto  aes_ctr_hmac_streaming.proto  aes_gcm_hkdf_streaming.proto  cached_dek_envelope.proto  ecdsa.proto  ecies_aead_hkdf.proto  hkdf_prf.proto  hmac.proto  hmac_prf.proto  kms_envelope.proto  prf_based_deriver.proto  rsa_ssa_pkcs1.proto  rsa_ssa_pss.proto
tools/release/: BUILD.bazel  postprocess_xcframework.sh
