"""Tink Obj-C Bazel module definition."""

module(
    name = "tink_objc",
    version = "1.7.0",
)

bazel_dep(name = "apple_support", version = "1.15.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_apple", version = "3.5.1", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "tink_cc", version = "2.1.3")
bazel_dep(name = "abseil-cpp", version = "20230802.1", repo_name = "com_google_absl")
