"""Tink Obj-C Bazel module definition."""

module(
    name = "tink_objc",
    version = "1.7.0",
)

bazel_dep(name = "apple_support", version = "1.24.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_apple", version = "4.2.0", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_cc", version = "0.2.11")
bazel_dep(name = "tink_cc", version = "2.4.0")
bazel_dep(name = "abseil-cpp", version = "20250814.1", repo_name = "com_google_absl")
bazel_dep(name = "protobuf", version = "33.0", repo_name = "com_google_protobuf")
