"""Tink Obj-C Bazel module definition."""

module(
    name = "tink_objc",
    version = "1.7.0",
)

bazel_dep(name = "apple_support", version = "2.2.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_apple", version = "4.4.0", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "tink_cc", version = "2.7.0")
bazel_dep(name = "abseil-cpp", version = "20260107.0", repo_name = "com_google_absl")
bazel_dep(name = "protobuf", version = "34.0.bcr.1")
