"""Tink Obj-C Examples Bazel module definition."""

module(name = "tink_objc_examples")

bazel_dep(name = "tink_objc")
local_path_override(
    module_name = "tink_objc",
    path = "../",
)

bazel_dep(name = "apple_support", version = "1.22.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_apple", version = "3.22.0", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_xcodeproj", version = "2.12.1")
bazel_dep(name = "protobuf", version = "33.0", repo_name = "com_google_protobuf")
