"""Tink Obj-C Examples Bazel module definition."""

module(name = "tink_objc_examples")

bazel_dep(name = "tink_objc")
local_path_override(
    module_name = "tink_objc",
    path = "../",
)

bazel_dep(name = "apple_support", version = "2.2.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_apple", version = "4.4.0", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_xcodeproj", version = "4.1.0")
bazel_dep(name = "protobuf", version = "34.0.bcr.1")
